Se modifico el archivo principal.html

--- a/principal.html
+++ b/principal.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Documento principal</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente commodi, voluptates omnis
+                necessitatibus eum nisi aut ullam tempore explicabo officiis. Beatae commodi nesciunt nihil praesentium,
+                voluptas perferendis assumenda eius. Labore?</p>
+        </article>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente commodi, voluptates omnis
+                necessitatibus eum nisi aut ullam tempore explicabo officiis. Beatae commodi nesciunt nihil praesentium,
+                voluptas perferendis assumenda eius. Labore?</p>
+        </article>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente commodi, voluptates omnis
+                necessitatibus eum nisi aut ullam tempore explicabo officiis. Beatae commodi nesciunt nihil praesentium,
+                voluptas perferendis assumenda eius. Labore?</p>
+        </article>
+        <aside><img src="" alt=""></aside>
+        <aside><img src="" alt=""></aside>
+        <aside><img src="" alt=""></aside>
+        <footer>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus facilis doloribus veniam ad
+                accusantium perferendis expedita quidem aspernatur quo laudantium eius necessitatibus quasi eos
+                explicabo, inventore eum dolor. Error, at?</p>
+        </footer>
+    </div>
 </body>
+
 </html>
