Se modifico el artchivo principal

--- a/principal.html
+++ b/principal.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pantalla principal</title>
 </head>
 <body>
-    
+    <div class="content">
+        <main>
+            <article>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, modi! Aperiam minus porro numquam, molestias debitis omnis veniam harum natus dolor quibusdam aut! Necessitatibus, esse placeat. Autem est eligendi in.</p>  
+            </article>
+            <article>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, modi! Aperiam minus porro numquam, molestias debitis omnis veniam harum natus dolor quibusdam aut! Necessitatibus, esse placeat. Autem est eligendi in.</p>  
+            </article>
+            <article>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, modi! Aperiam minus porro numquam, molestias debitis omnis veniam harum natus dolor quibusdam aut! Necessitatibus, esse placeat. Autem est eligendi in.</p>  
+            </article>
+
+            <aside>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+            </aside>
+
+            <footer>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta alias dolores nemo aperiam necessitatibus reprehenderit dolorem. Quas asperiores optio incidunt blanditiis omnis eius magni modi reiciendis, pariatur vero atque labor?</p>
+            </footer>
+        </main>
+    </div>
 </body>
 </html>
